<resources>
    <string name="app_name">Lesson04_Android_Intent</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="logo_description">Logo</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>

    <!--String for error login view-->
    <string name="title_activity_login">Sign In</string>
    <string name="error_title">Sign In Error</string>
    <string name="error_message">Please fill email and password</string>
    <string name="alert_close_message">Close</string>

    <!--String for main view-->
    <string name="title_activity_main">Main Menu</string>
    <string name="action_intent_custom">Show Child Activity</string>
    <string name="action_intent_map">Use Phone Map</string>
    <string name="action_intent_call">Make A Call</string>
    <string name="action_intent_web">View A Website</string>

    <!--String for child view-->
    <string name="title_activity_child">Child Content</string>
    <string name="label_favorite">Favorite Category</string>
    <string name="label_category_one">Action</string>
    <string name="label_category_two">Comedy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
